@@ -32,6 +32,7 @@ Bug fixes
  * Password reset form no longer indicates whether the email is recognised, as per standard Django behaviour (Bertrand Bordage)
  * ``UserAttributeSimilarityValidator`` is now correctly enforced on user creation / editing forms (Tim Heap)
  * Focal area removal not working in IE11 and MS Edge (Thibaud Colas)
+ * Rewrite password change feedback message to be more user-friendly ( Casper Timmers)
 
 
 Upgrade considerations
